tests/reject/bad_call_2.ul
void main() {
     int x;

     foo(x, 1;
}